added some starter html using bootstrap

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project2_teamorange",
+  "name": "pretty_portfolio",
   "version": "1.0.0",
   "description": "Project 2 Starter",
   "main": "server.js",
