--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,24 @@
 {
   "development": {
-    "username": "root",
-    "password": "Password01",
-    "database": "exampledb",
-    "host": "localhost",
+    "username": "kpyw350zb9224hv9",
+    "password": "xw4apkul7z4an0bx",
+    "database": "gtcgxfw6xp0376rd",
+    "host": "k2pdcy98kpcsweia.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "testdb",
-    "host": "localhost",
+    "username": "kpyw350zb9224hv9",
+    "password": "xw4apkul7z4an0bx",
+    "database": "gtcgxfw6xp0376rd",
+    "host": "k2pdcy98kpcsweia.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "logging": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "kpyw350zb9224hv9",
+    "password": "xw4apkul7z4an0bx",
+    "database": "gtcgxfw6xp0376rd",
+    "host": "k2pdcy98kpcsweia.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
